<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".ui.activities.login.LoginActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:layout_margin="50dp"
                android:scaleType="fitXY"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loginlottie" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/phone_verification"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/we_need_to_verify_your_phone_number_to_get_started"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:id="@+id/lyt_enter_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="@dimen/_20ssp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/outline_semi_square_btn"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".2"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/_91"
                            android:textAlignment="textEnd"
                            android:textColor="@color/txtBlue"
                            android:textSize="@dimen/_16ssp" />

                        <EditText
                            android:id="@+id/etPhone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".8"
                            android:autofillHints="enter"
                            android:backgroundTint="@android:color/transparent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/enter_number"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:textColor="@color/txtBlue"
                            android:textSize="@dimen/_14ssp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/sendCodeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/google"
                        style="@style/btn_main"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:visibility="visible"
                        tools:ignore="UseCompoundDrawables">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/send_the_code"
                            android:textAlignment="center"
                            android:textColor="@color/white_light"
                            android:textSize="@dimen/_14ssp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_enter_otp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_detecting_otp_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/detecting_otp_60"
                    android:textColor="@color/black" />


                <in.aabhasjindal.otptextview.OtpTextView
                    android:id="@+id/otp_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    app:bar_active_color="@color/txtBlue"
                    app:bar_enabled="true"
                    app:bar_height="1dp"
                    app:height="40dp"
                    app:length="6"
                    app:otp_text_size="24dp"
                    app:width="40dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_light"
                        android:text="@string/didn_t_receive_the_otp"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/tvResendOtp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:enabled="false"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:text="@string/resend_otp"
                        android:textColor="@color/txtBlue"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cvVerify"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="15dp"
                    android:visibility="visible"
                    app:cardBackgroundColor="@color/colorTheme1"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/verify_proceed"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14ssp"
                            tools:ignore="AllCaps" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>